# mcpelauncher-errorwindow

./: CMakeLists.txt  mcpelauncher_en.ts  qml.qrc  translations.qrc
include/: errorwindow.h
src/: errorwindow.cpp  main.cpp
src/qml/: main.qml
